General improvements and refactoring
- Add checkExistenceOfTasks method in TaskController
- Add warning method in View class
- Add confirm method in View class
- Add input method in View class
- Add inputOptions method in View class
- Refactor TaskController
- Refactor CategoryController
- Refactor UserController
- Refactor UserLogin
- Refactor FilteredTaskSearchService
- Refactor TaskBuilder
- Fix getConnection() method in DataBaseConnection class
- Remove wildcard import for java.time in NextDueDateCalculator class
- Update UML